1) removed a way for users to see a broken navbar when scrolling, now users need to go all the way to the top in mobile (to be revisited). 2) Fixed overlay and improved visibility of words. 3) Fixed green dot flickering problem.

--- a/wags-sky/src/styles/scss/routes/partials/_general.scss
+++ b/wags-sky/src/styles/scss/routes/partials/_general.scss
@@ -2,6 +2,10 @@
   cursor: pointer;
 }
 
+.is-hidden {
+  visibility: hidden;
+}
+
 .is-medium-blur {
   filter: blur(5px);
 }
